August 11, 2025
    Fixed new bug with dictionary objects that made it into the last update.
    Fixed memory reads that tried to check if a champion was fully leveled, but lost their reference values in the dll.
    Updated teh GameObjectStructure with some significant changes.
        - Cleaned up __Get() code and broke functionality into smaller functions for better readability.
        - Added "__version" as new variable for checking a collection's version. Requires Imports update.
        - Added caching to volatile dictionaries which resets on their version updating rather than resetting on every read.
        - Added new Helper functions DoesCollectionNeedReset and ResetCollection utilizing the version additions above.
       
August 6, 2025
    Fixed issues with pointer addresses not refreshing properly.
    Fixed multiple performance slowdowns.

August 1, 2025
    Updated Readme.md.

August 1, 2025
    Fixed HewMaan handler.
    Fixed some potential infinite recursion locations.
    Updated imports to use new form. Requires updated Importer to generate imports. Generates warnings for mismatched imports/script versions.
    updated ActiveEffectKeyHandler to reduce clock cycles.
        -Note: Refresh will now take a hero handler and only refresh that handler.

April 11, 2025
    Updated 64 bit Imports for v618.2. (Steam only)
    Fixed methods that used the now removed variable of "allUpgrades".

December 10, 2024
    Updated 64 bit Imports for v600. (Steam only)
    Updated pointers for EGS v600.

November 6, 2024
    Updated 64 bit Imports for v596. (Steam only)
    Updated pointers for EGS v596.
    
August 17, 2024
    Updated 64 bit Imports for v588. (Steam only)
    Updated stats addon to account for Blessing of Mechanus.

August 14, 2024
    Added Ellywick hero functions.
    Added Steam v587 pointers.
    Updated MemoryFunctionsFullRead to be able to read text based arrays for hero handlers.
    Updated Addons.md.

August 3, 2024