@@ -1,1 +1,2 @@
+#include %A_LineFile%\..\SH_ServerCalls.ahk
 #include %A_LineFile%\..\IC_ServerCalls_Class.ahk
